--- a/music/426341675.html
+++ b/music/426341675.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="content">
-		<a href="https://github.com/imadgerges/musica.github.io/blob/master/storage/ARABIC/test1.mp3" download><button class="button" >Download</button></a>
+		<a href="https://github.com/imadgerges/musica.github.io/blob/master/storage/ARABIC/test1.mp3"><button class="button" >Download</button></a>
           <p>
             <img src="http://i1.hdslb.com/video/be/bebf1aaa6e491d2647317587b03a152c.jpg">
           </p>
