--- a/music/426341675.html
+++ b/music/426341675.html
@@ -197,7 +197,7 @@
     music: {                                          // Required, music info
       title: '秒速五厘米',                                 // Required, music title
       author: 'Pianoking',                          // Required, music author
-      url: 'http://localhost/music/storage/ARABIC/test1.mp3',  // Required, music url
+      url: 'https://github.com/imadgerges/musica.github.io/raw/master/storage/ARABIC/test1.mp3',  // Required, music url
       pic: 'http://p3.music.126.net/8N1TiSRZfMttoaQlhe-KKQ==/17832979091232041.jpg'  // Optional, music picture
     }
   });
